@@ -6,6 +6,7 @@ Makefile.in
 *.log
 *.xac.*.xac
 gnucash
+gnucash-make-guids
 .deps
 .libs
 gnc-dir.h
